# backend/src/config/swagger-output.json
@@ -29,6 +29,24 @@
         }
       }
     },
+    "/invite/{roomId}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "roomId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/auth/google": {
       "post": {
         "description": "",
